@@ -91,6 +91,8 @@ WARNING_NON_EXISTING_I18N_VARIABLE_REFERENCE = Potencijalno nepostoje\u0107a ref
 
 ERROR_INVALID_ERROR_HANDLER_RETURN_CODE = Neispravan povratni kod za error handlera (ispravni kodovi su 0, 1, 2 i 3)
 
+ERROR_INVALID_VARIABLE_TYPE_SCHEMA_TYPE_REQUIRED = Neispravan tip varijable, treba biti Schema tip
+
 categoryKey=Kategorija
 i18n_lang_codeKey=I18n jezi\u010Dki kod
 
