@@ -44,13 +44,13 @@ public final class SharkValidationErrorIds {
    public static final String ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED = "ERROR_TOOL_AGENT_INVALID_FORMAL_PARAMETER_MODE_OUT_REQUIRED";
 
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_EXTERNAL_LOCATION_TYPE_BYTE_ARRAY_REQUIRED";
-   
+
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_REQUIRED";
 
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_STRING_ARRAY_REQUIRED";
 
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_BOOLEAN_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_BOOLEAN_REQUIRED";
-   
+
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_INTEGER_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_BASIC_TYPE_INTEGER_REQUIRED";
 
    public static final String ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_SCHEMA_TYPE_REQUIRED = "ERROR_TOOL_AGENT_INVALID_PARAMETER_TYPE_SCHEMA_TYPE_REQUIRED";
@@ -106,7 +106,7 @@ public final class SharkValidationErrorIds {
    public static final String ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED = "ERROR_VARIABLE_INITIAL_VALUE_IMPLICIT_CIRCULAR_REFERENCES_NOT_ALLOWED";
 
    public static final String ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED = "ERROR_VARIABLE_INITIAL_VALUE_DYNAMICSCRIPT_VARIABLE_REFERENCES_NOT_ALLOWED";
-   
+
    public static final String ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED = "ERROR_VARIABLE_INITIAL_VALUE_XPDL_STRING_VARIABLE_REFERENCES_NOT_ALLOWED";
 
    public static final String ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED = "ERROR_XPDL_STRING_VARIABLE_SELF_REFERENCES_NOT_ALLOWED";
@@ -120,7 +120,7 @@ public final class SharkValidationErrorIds {
    public static final String WARNING_NON_EXISTING_CONFIG_STRING_VARIABLE_REFERENCE = "WARNING_NON_EXISTING_CONFIG_STRING_VARIABLE_REFERENCE";
 
    public static final String ERROR_NON_EXISTING_XPDL_STRING_VARIABLE_REFERENCE = "ERROR_NON_EXISTING_XPDL_STRING_VARIABLE_REFERENCE";
-   
+
    public static final String ERROR_NON_EXISTING_I18N_VARIABLE_REFERENCE = "ERROR_NON_EXISTING_I18N_VARIABLE_REFERENCE";
 
    public static final String WARNING_NON_EXISTING_XPDL_STRING_VARIABLE_REFERENCE = "WARNING_NON_EXISTING_XPDL_STRING_VARIABLE_REFERENCE";
@@ -131,4 +131,5 @@ public final class SharkValidationErrorIds {
 
    public static final String WARNING_EXPRESSION_POSSIBLY_INVALID = "WARNING_EXPRESSION_POSSIBLY_INVALID";
 
+   public static final String ERROR_INVALID_VARIABLE_TYPE_SCHEMA_TYPE_REQUIRED = "ERROR_INVALID_VARIABLE_TYPE_SCHEMA_TYPE_REQUIRED";
 }
